; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/simplelink/oslib/extr_osi_freertos.c_osi_MsgQCreate.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/simplelink/oslib/extr_osi_freertos.c_osi_MsgQCreate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OSI_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @osi_MsgQCreate(i64* %0, i8* %1, i64 %2, i64 %3) #0 {
  %5 = alloca i64*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  store i64* %0, i64** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i64, i64* %8, align 8
  %11 = load i64, i64* %7, align 8
  %12 = call i32* @xQueueCreate(i64 %10, i64 %11)
  store i32* %12, i32** %9, align 8
  %13 = load i32*, i32** %9, align 8
  %14 = icmp ne i32* %13, null
  %15 = zext i1 %14 to i32
  %16 = call i32 @ASSERT(i32 %15)
  %17 = load i32*, i32** %9, align 8
  %18 = ptrtoint i32* %17 to i64
  %19 = load i64*, i64** %5, align 8
  store i64 %18, i64* %19, align 8
  %20 = load i32, i32* @OSI_OK, align 4
  ret i32 %20
}

declare dso_local i32* @xQueueCreate(i64, i64) #1

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
